terraform/compute.tf
# EC2 server
resource "aws_instance" "server01"{
  instance_type ="t2.micro"
  ami ="${lookup(var.aws_ami, var.aws_region)}"
  key_name = "${var.aws_key_name}"
  security_groups = "${var.aws_security_group}"
}
